--- a/.github/workflows/toolchain-common.yml
+++ b/.github/workflows/toolchain-common.yml
@@ -25,10 +25,10 @@ jobs:
     runs-on: windows-latest
     timeout-minutes: 20
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Cache VC6 installation
+      - name: Cache VC6 Installation
         if: startsWith(inputs.preset, 'vc6')
         id: cache-vc6
         uses: actions/cache@v4
@@ -54,24 +54,23 @@ jobs:
           EXPECTED_HASH: "118D0F1ACBBD70C3F8B081CA4DBAF955FE0C6C359A76636E930AA89FDC551091"
         shell: pwsh
         run: |
-          Write-Host "Downloading VC6 portable installation"
+          Write-Host "Downloading VC6 Portable Installation" -ForegroundColor Cyan
           aws s3 cp s3://github-ci/VS6_VisualStudio6.7z VS6_VisualStudio6.7z --endpoint-url $env:AWS_ENDPOINT_URL
 
-          Write-Host "Verifying file integrity..."
-          $hash = (Get-FileHash -Path VS6_VisualStudio6.7z -Algorithm SHA256).Hash
-          Write-Host "Downloaded file SHA256: $hash"
-          Write-Host "Expected SHA256: $env:EXPECTED_HASH"
+          Write-Host "Verifying File Integrity" -ForegroundColor Cyan
+          $fileHash = (Get-FileHash -Path VS6_VisualStudio6.7z -Algorithm SHA256).Hash
+          Write-Host "Downloaded file SHA256: $fileHash"
+          Write-Host "Expected file SHA256: $env:EXPECTED_HASH"
           if ($hash -ne $env:EXPECTED_HASH) {
               Write-Error "Hash verification failed! File may be corrupted or tampered with."
               exit 1
           }
 
-          Write-Host "Extracting archive..."
+          Write-Host "Extracting Archive" -ForegroundColor Cyan
           & 7z x VS6_VisualStudio6.7z -oC:\VC6
-
           Remove-Item VS6_VisualStudio6.7z -Verbose
 
-      - name: Set up VC6 environment
+      - name: Set Up VC6 Environment
         if: startsWith(inputs.preset, 'vc6')
         shell: pwsh
         run: |
@@ -90,12 +89,9 @@ jobs:
           "INCLUDE=$MSVCDir\ATL\INCLUDE;$MSVCDir\INCLUDE;$MSVCDir\MFC\INCLUDE;$env:INCLUDE" >> $env:GITHUB_ENV
           "LIB=$MSVCDir\LIB;$MSVCDir\MFC\LIB;$env:LIB" >> $env:GITHUB_ENV
 
-      - name: Build ${{ inputs.game }} with CMake using ${{ inputs.preset }} preset
+      - name: Configure ${{ inputs.game }} with CMake Using ${{ inputs.preset }} Preset
         shell: pwsh
         run: |
-          Write-Host "Configuring project with CMake using preset: ${{ inputs.game }} (${{ inputs.preset }})"
-
-          # Set build flags based on game and tools
           if ("${{ inputs.game }}" -eq "Generals") {
             $buildFlags = @("-DGENZH_BUILD_ZEROHOUR=OFF", "-DGENZH_BUILD_GENERALS=ON")
             if ("${{ inputs.tools }}" -eq "true") {
@@ -110,18 +106,20 @@ jobs:
 
           cmake --preset ${{ inputs.preset }} $buildFlags
 
-          Write-Host "Building project with CMake using preset: ${{ inputs.game }} (${{ inputs.preset }})"
+      - name: Build ${{ inputs.game }} with CMake Using ${{ inputs.preset }} Preset
+        shell: pwsh
+        run: |
+          cmake --build "build\${{ inputs.preset }}"
 
+      - name: Collect ${{ inputs.game }} ${{ inputs.preset }} Artifacts
+        shell: pwsh
+        run: |
           $buildDir = "build\${{ inputs.preset }}"
-
-          cmake --build $buildDir
-
-          Write-Host "Collecting ${{ inputs.game }} artifacts"
           $artifactsDir = New-Item -ItemType Directory -Force -Path "$buildDir\${{ inputs.game }}\artifacts" -Verbose
           $files = Get-ChildItem -Path "$buildDir\${{ inputs.game }}" -File | Where-Object { $_.Extension -in @(".exe", ".dll", ".pdb") } -Verbose
           $files | Move-Item -Destination $artifactsDir -Verbose
 
-      - name: Upload ${{ inputs.game }} (${{ inputs.preset }}) artifact
+      - name: Upload ${{ inputs.game }} ${{ inputs.preset }} Artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.game }}-${{ inputs.preset }}${{ inputs.tools == true && '+tools' || '' }}
