--- a/.github/workflows/build-games.yml
+++ b/.github/workflows/build-games.yml
@@ -29,8 +29,6 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 50  # Fetch more history for better change detection
 
       - name: Filter Changed Paths
         uses: dorny/paths-filter@v3
@@ -56,6 +54,26 @@ jobs:
           echo "- Generals: ${{ steps.filter.outputs.generals == 'true' && '✅' || '❌' }}" >> $GITHUB_STEP_SUMMARY
           echo "- GeneralsMD: ${{ steps.filter.outputs.generalsmd == 'true' && '✅' || '❌' }}" >> $GITHUB_STEP_SUMMARY
           echo "- Shared: ${{ steps.filter.outputs.shared == 'true' && '✅' || '❌' }}" >> $GITHUB_STEP_SUMMARY
+
+  cpp-lint:
+    name: C++ Lint
+    needs: detect-changes
+    if: ${{ github.event_name == 'workflow_dispatch' || needs.detect-changes.outputs.generals == 'true' || needs.detect-changes.outputs.generalsmd == 'true' || needs.detect-changes.outputs.shared == 'true' }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: C++ Lint
+        uses: cpp-linter/cpp-linter-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          version: '19'
+          style: 'file'
+          tidy-checks: '-*'
+          thread-comments: ${{ github.event_name == 'pull_request' && 'update' }}
 
   build-generals:
     name: Build Generals (${{ matrix.preset }}${{ matrix.tools && '+tools' || '' }})
