unify(texture): Move W3DWater, W3DLaserDraw and WW3D2 texture related files to Core (#1989)

--- a/Generals/Code/GameEngine/CMakeLists.txt
+++ b/Generals/Code/GameEngine/CMakeLists.txt
@@ -215,7 +215,7 @@ set(GAMEENGINE_SRC
     Include/GameClient/TerrainVisual.h
 #    Include/GameClient/VideoPlayer.h
 #    Include/GameClient/View.h
-    Include/GameClient/Water.h
+#    Include/GameClient/Water.h
     Include/GameClient/WindowLayout.h
 #    Include/GameClient/WindowVideoManager.h
     Include/GameClient/WindowXlat.h
@@ -777,7 +777,7 @@ set(GAMEENGINE_SRC
     Source/GameClient/Terrain/TerrainVisual.cpp
 #    Source/GameClient/VideoPlayer.cpp
 #    Source/GameClient/View.cpp
-    Source/GameClient/Water.cpp
+#    Source/GameClient/Water.cpp
     Source/GameLogic/AI/AI.cpp
     Source/GameLogic/AI/AIDock.cpp
     Source/GameLogic/AI/AIGroup.cpp
