unify(heightmap): Merge Height Map related code and move Zero Hour's BaseHeightMap, FlatHeightMap, W3DPropDraw, W3DTreeDraw, W3DPropBuffer, W3DSnow, W3DTerrainBackground files to Core (#1991)

--- a/Core/GameEngine/CMakeLists.txt
+++ b/Core/GameEngine/CMakeLists.txt
@@ -224,7 +224,7 @@ set(GAMEENGINE_SRC
 #    Include/GameClient/ShellHooks.h
 #    Include/GameClient/ShellMenuScheme.h
     Include/GameClient/Smudge.h
-#    Include/GameClient/Snow.h
+    Include/GameClient/Snow.h
 #    Include/GameClient/Statistics.h
 #    Include/GameClient/TerrainRoads.h
 #    Include/GameClient/TerrainVisual.h
@@ -820,7 +820,7 @@ set(GAMEENGINE_SRC
     Source/GameClient/ParabolicEase.cpp
 #    Source/GameClient/RadiusDecal.cpp
 #    Source/GameClient/SelectionInfo.cpp
-#    Source/GameClient/Snow.cpp
+    Source/GameClient/Snow.cpp
 #    Source/GameClient/Statistics.cpp
 #    Source/GameClient/System/Anim2D.cpp
 #    Source/GameClient/System/CampaignManager.cpp
